# look

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  look.md  test_pos_changes.swift
.github/: FUNDING.yml  guideline.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-macos.yml  reusable-release-macos.yml
benchmarks/: README.md
bridge/ffi/: Cargo.toml
core/: Cargo.toml
core/engine/: Cargo.toml
core/engine/examples/: perf_bench.rs
core/engine/src/: action.rs  config.rs  lib.rs  normalize.rs  query.rs  result.rs  scoring.rs  search.rs
core/engine/src/index/: apps.rs  files.rs  mod.rs  settings.rs
core/engine/src/platform/: mod.rs  paths.rs
core/engine/src/platform/macos/: apps.rs  mod.rs  settings_catalog.rs
core/engine/src/platform/windows/: apps.rs  mod.rs  settings_catalog.rs
core/indexing/: Cargo.toml
core/matching/: Cargo.toml
core/ranking/: Cargo.toml
core/storage/: Cargo.toml
docs/: apple-developer-release-guide.md  architecture.md  backend-guide.md  features.md  homebrew-cask-look.rb  homebrew-release.md  roadmap.md  tasks.md  user-guide.md  windows-port-plan.md  windows-v1-parity-checklist.md
docs/bench-notes/: 2026-04-05.md  2026-04-08.md  2026-04-15.md  2026-04-23.md
look-app/: ContentView.swift  look_appApp.swift
look-app.xcodeproj/: project.pbxproj
scripts/: build-release.sh  generate-homebrew-cask.sh  install-look.sh  release-macos-app.sh  test_lacviet.swift  test_lookup.swift
(+79 files in other folders)
