[package]
name = "look-engine"
edition = "2024"
license = "MIT"
version = "0.1.0"

[dependencies]
look-indexing = { path = "../indexing" }
look-matching = { path = "../matching" }
look-ranking = { path = "../ranking" }
look-storage = { path = "../storage" }
plist = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
